# eduboard

AlyShmahell-BCompEng-UniLat/: Deriving a Solution to Quadratic Residues.tex  LICENSE.md  README.md
AlyShmahell-BCompEng-UniLat/AlyMath/: README.md
AlyShmahell-BCompEng-UniLat/AlyShmahell-SCKY/: LICENSE
AlyShmahell-BCompEng-UniLat/S-CKY/: S-CKY.aux  S-CKY.tex  S-CKY.toc  pseudo-code.cpp
AlyShmahell-BCompEng-UniLat/SCKY_doc/: example.graphml  input.txt
AlyShmahell-BCompSci-UnivAQ/: LICENSE  README.md  index.html
AlyShmahell-BCompSci-UnivAQ/0SumBot/: .gitignore  0SumGA.py  G0GA.py  OptimizedParameters  README.md  build.py  crun  fitOnot  grun  log.txt  rmv-dbg.py  run  run.py  train.py  winner.txt  zeroSumGA.py
AlyShmahell-BCompSci-UnivAQ/AlyShmahell-ThesisProject/: README.md  requirements.sh
AlyShmahell-BCompSci-UnivAQ/BioInformatics/: README.md
AlyShmahell-BCompSci-UnivAQ/ComputerScience/IntelligentSystemsAndRobotics/Robotics/FinalProject-HackingTheDeepLearningRobotToWork/ROS-Curiosity/: CMakeLists.txt  compile.sh  package.xml  world
AlyShmahell-BCompSci-UnivAQ/ComputerScience/IntelligentSystemsAndRobotics/Robotics/FinalProject-HackingTheDeepLearningRobotToWork/ROS-Curiosity/src/: curiosity.cpp
AlyShmahell-BCompSci-UnivAQ/ComputerScience/IntelligentSystemsAndRobotics/Robotics/FinalProject-HackingTheDeepLearningRobotToWork/ROS-Curiosity/temp/: curiosity.cpp
AlyShmahell-BCompSci-UnivAQ/FCCR/: LICENSE  README.md  create_admin  run  setup  tree.txt
AlyShmahell-BCompSci-UnivAQ/FastA/: AlyShmahell-FastA.tex  fasta.py  log.txt
AlyShmahell-BCompSci-UnivAQ/Naive Global Pairwise Alignment/: ngpa  ngpa.cpp  ngpa.py  ngpaDatabase1  ngpaDatabase2  ngpaDatabase3  ngpaDatabase4  (+7 more)
AlyShmahell-CS50/: LICENSE  LICENSE.md  README.md
(+352 files in other folders)
