<?xml version="1.0"?>

<package>
  <name>curiosity</name>
  <version>0.0.1</version>
  <description>The curiosity package</description>

  <author email="aly.shmahell@gmail.com">aly shmahell</author>
  <maintainer email="aly.shmahell@gmail.com">aly shmahell</maintainer>
  <license>Copyright 2016 Aly Shmahell, All Rights Reserved</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
